--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,1 +1,13 @@
+// COLOR
+$blue: #3275EE;
+$yellow: #FCF29C;
+$text_color: #001D3A;
+$grey: #646464;
+$green: #44C325;
+$red: #FF3D3D;
+$violet: #CCDCF7;
+
+// FONT FAMILY
+$font-weight-normal: 400;         // Regular (normal)
+$font-weight-medium: 500;         // Medium
 
