--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
 @import "base/typography";
 @import "base/inputs";
 @import "base/buttons";
+@import "base/pagination";
 
 /*custom components*/
 @import "components/grid"; 
