--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -6,8 +6,8 @@
   padding: 9px 32px;
   text-align: center;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 1.6rem;
+  line-height: 160%;
   color: #fff;
   background-color: transparent;
   border-radius: 8px;
@@ -24,7 +24,7 @@
   }
 
   &.sm {
-    font-size: 14px;
+    font-size: 1.4rem;
     padding: 4px 24px;
   }
 
