--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
 //font-family: 'Rubik', sans-serif;
 
+html {
+   font-size: 10px;
+}
+
   
 body {
    font-family: 'Rubik', sans-serif;
