медиа + новые элементы uikit

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -11,3 +11,11 @@ $violet: #CCDCF7;
 $font-weight-normal: 400;         // Regular (normal)
 $font-weight-medium: 500;         // Medium
 
+// MEDIA
+$mobile_xsm: 375;
+$mobile_sm: 480;
+$mobile_md: 640;
+$mobile_lg: 768;
+$tablet: 991;
+$tablet_lg: 1024;
+
