--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -6,7 +6,7 @@
   padding: 9px 32px;
   text-align: center;
   font-weight: 500;
-  font-size: 1.6rem;
+  font-size: 16px;
   line-height: 160%;
   color: #fff;
   background-color: transparent;
@@ -21,11 +21,16 @@
   &:active {
     outline: none !important;
     box-shadow: none !important;
+    text-decoration: none;
   }
 
   &.sm {
-    font-size: 1.4rem;
-    padding: 4px 24px;
+    font-size: 14px;
+    padding: 6px 24px;
+  }
+
+  &.block {
+    width: 100%;
   }
 
   svg {
@@ -106,6 +111,3 @@
   }
 }
 
-.btn-block {
-  width: 100%;
-}
