--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,7 +2,12 @@
 //font-family: 'Rubik', sans-serif;
 
 html {
-   font-size: 10px;
+   font-size: 16px;
+}
+
+.content{
+   padding-bottom: 56px;
+   position: relative;
 }
 
   
