страницы объявления, тендеры, цены поставщиков

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -3,7 +3,8 @@ $blue: #3275EE;
 $yellow: #FCF29C;
 $text_color: #001D3A;
 $grey: #646464;
-$green: #44C325;
+//$green: #44C325;
+$green: #07D61C;
 $red: #FF3D3D;
 $violet: #CCDCF7;
 
