--- a/src/scss/base/_breadcrumbs.scss
+++ b/src/scss/base/_breadcrumbs.scss
@@ -1,7 +1,7 @@
 .breadcrumbs {
   display: flex;
-  padding-top: 24px;
-  margin-bottom: 16px;
+  padding-top: 24px!important;
+  margin-bottom: 24px;
 }
 
 .breadcrumbs__item {
