--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,14 +8,28 @@ h2, .h2 {
 }
 
 h3, .h3 {
+  font-size: 22px;
+  line-height: 140%;
+  font-weight: $font-weight-medium;
+  margin: 0;
+}
+
+h4, .h4 {
   font-size: 18px;
   line-height: 160%;
   font-weight: $font-weight-medium;
   margin: 0;
 }
 
-h4, .h4 {
+h5, .h5 {
   font-size: 16px;
+  line-height: 160%;
+  font-weight: $font-weight-medium;
+  margin: 0;
+}
+
+h6, .h6 {
+  font-size: 14px;
   line-height: 160%;
   font-weight: $font-weight-medium;
   margin: 0;
@@ -59,7 +73,7 @@ strong {
     }
   }
   &.sm{
-    font-size: 1.4rem;
+    font-size: 14px;
 
   }
 }
@@ -82,5 +96,17 @@ ul {
 }
 .red {
   color: $red;
+}
+
+.mb-12{
+  margin-bottom: 12px;
+}
+
+.mb-32{
+  margin-bottom: 12px;
+}
+
+.border-bottom{
+  border-bottom: 1px solid #DFDEE2;
 }
 
