--- a/src/scss/components/_announcement-card.scss
+++ b/src/scss/components/_announcement-card.scss
@@ -12,8 +12,15 @@
 .announcement-card__image {
   width: 120px;
   height: 120px;
-  background-color: #ededed;
   flex-shrink: 0;
   margin-right: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img{
+    max-width: 100%;
+    height: auto;
+  }
 
 }
