--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -3,7 +3,7 @@
   height: 40px;
   background: #F2F2F2;
   border-radius: 8px;
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 185%;
   padding: 7px 16px;
   border: 1px solid #F2F2F2;
@@ -32,7 +32,7 @@
 
   &.lg {
     height: 52px;
-    font-size: 1.6rem;
+    font-size: 16px;
   }
 }
 
@@ -44,6 +44,7 @@
   border-radius: 8px;
   overflow: hidden;
   width: 100%;
+  margin: 0;
 }
 
 .materil-group__label {
@@ -52,7 +53,7 @@
   top: 13px;
   z-index: 2;
   color: #646464;
-  font-size: 1.6rem;
+  font-size: 16px;
   line-height: 160%;
   transition: 0.15s ease-in-out;
   margin-bottom: 24px;
@@ -91,7 +92,7 @@
 .materil-group.active .materil-group__label {
   left: 16px;
   top: 6px;
-  font-size: 1rem;
+  font-size: 10px;
   line-height: 140%;
 }
 
@@ -116,7 +117,7 @@
 }
 
 .materil-group__error-text {
-  font-size: 1.2rem;
+  font-size: 12px;
   line-height: 140%;
   color: $red;
   display: none;
@@ -145,7 +146,7 @@
   background: #F9F9F9;
   border-color: #F9F9F9;
   &::placeholder {
-    font-size: 1.4rem;
+    font-size: 14px;
     color: #646464;
   }
 
@@ -199,7 +200,7 @@ input[type="radio"] {
 input[type="checkbox"]+span {
   padding-left: 24px;
   color: $text_color;
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 160%;
 }
 
@@ -257,7 +258,7 @@ input[type="radio"]:not(:checked)+label {
   line-height: 20px;
   display: inline-block;
   color: $text_color;
-  font-size: 1.4rem;
+  font-size: 14px;
 }
 
 input[type="radio"]:checked+label:before,
@@ -292,7 +293,7 @@ input[type="radio"]:checked+label:before {
   padding: 11px 30px;
   background: #F2F2F2;
   color: $text_color;
-  font-size: 1.6rem;
+  font-size: 16px;
   line-height: 160%;
   transition: all .4s;
   cursor: pointer;
@@ -345,7 +346,7 @@ input[type="radio"]:checked+label:before {
   justify-content: space-between;
   align-items: center;
   line-height: 260%;
-  font-size: 1.6rem;
+  font-size: 16px;
   font-weight: $font-weight-medium;
   background: #CCDCF7;
   opacity: 0.8;
