--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,7 @@
 // plugins
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import "~select2/src/scss/core.scss";
 
 // pages
 @import "pages/ui";
@@ -36,12 +37,15 @@
 @import "base/pagination";
 @import "base/breadcrumbs";
 @import "base/menu";
+@import "base/select";
 
 /*custom components*/
 @import "components/grid";
 @import "components/loader";
 @import "components/status";
 @import "components/announcement-card";
+@import "components/proposal-card";
 @import "components/tender-card";
 @import "components/sliders";
+@import "components/info-block";
 
