--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -198,6 +198,7 @@ input[type="radio"] {
 }
 
 input[type="checkbox"]+span {
+  display: inline-block;
   padding-left: 24px;
   color: $text_color;
   font-size: 14px;
@@ -210,11 +211,10 @@ input[type="checkbox"]+span:before {
   width: 16px;
   height: 16px;
   position: absolute;
-  top: 50%;
+  top: 5px;
   left: 0;
-  transform: translateY(-9px);
   vertical-align: middle;
-  border: 2px solid #646464;
+  border: 1px solid #646464;
   border-radius: 2px;
   color: $text_color;
 }
@@ -228,9 +228,8 @@ input[type="checkbox"]:checked+span:before {
 input[type="checkbox"]:checked+span:after {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 5px;
   left: 0;
-  transform: translateY(-9px);
   width: 16px;
   height: 16px;
   background-image: url(../img/icons/check.svg);
@@ -289,7 +288,8 @@ input[type="radio"]:checked+label:before {
 }
 
 .file-reader__label {
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   padding: 11px 30px;
   background: #F2F2F2;
   color: $text_color;
@@ -298,6 +298,7 @@ input[type="radio"]:checked+label:before {
   transition: all .4s;
   cursor: pointer;
   border-radius: 8px;
+  margin: 0;
   &.loading {
     .file-reader__icon-clip {
       display: none;
@@ -351,7 +352,7 @@ input[type="radio"]:checked+label:before {
   background: #CCDCF7;
   opacity: 0.8;
   border-radius: 8px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   max-width: 343px;
 }
 
