--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,4 +48,6 @@
 @import "components/tender-card";
 @import "components/sliders";
 @import "components/info-block";
+@import "components/table";
+@import "components/phone-btn";
 
