--- a/src/scss/components/_proposal-card.scss
+++ b/src/scss/components/_proposal-card.scss
@@ -60,3 +60,9 @@
   flex-shrink: 0;
   line-height: 52px;
 }
+
+.proposal-card__action{
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #DFDEE2;
+}
