--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -78,7 +78,9 @@ strong {
   }
   &.sm{
     font-size: 14px;
-
+  }
+  &.xs{
+    font-size: 12px;
   }
 }
 
@@ -86,6 +88,10 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+label {
+  margin: 0;
 }
 
 
