--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,7 @@
 
 /*BS components*/ 
 @import "~bootstrap/scss/transitions";
-@import "~bootstrap/scss/modal";
+//@import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/nav";
 
@@ -50,4 +50,7 @@
 @import "components/info-block";
 @import "components/table";
 @import "components/phone-btn";
+@import "components/ceni-card";
+
+@import "components/modals/modal-filter";
 
