все страницы вехнего ряда

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -6,8 +6,9 @@ html {
 }
 
 .content{
-   padding-bottom: 56px;
+   padding: 16px 0 56px;
    position: relative;
+   border-top: 1px solid #DFDEE2;
 }
 
   
