--- a/src/scss/base/_breadcrumbs.scss
+++ b/src/scss/base/_breadcrumbs.scss
@@ -1,7 +1,5 @@
 .breadcrumbs {
   display: flex;
-  padding-top: 24px!important;
-  margin-bottom: 16px;
 }
 
 .breadcrumbs__item {
@@ -53,12 +51,17 @@
 
   &:before {
     content: '';
-    width: 6px;
-    height: 9px;
+    width: 7px;
+    height: 12px;
     background: url(../img/breadcrumbs-right.svg) no-repeat center center /contain;
-    transform: translateY(-50%) rotate(180deg);
+    transform: rotate(180deg);
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 5px;
+  }
+
+  &:hover{
+    text-decoration: none;
+    color: rgba(0, 29, 58, 0.9);
   }
 }
