--- a/src/scss/base/_select.scss
+++ b/src/scss/base/_select.scss
@@ -9,35 +9,44 @@
     }
   }
 
-  .select-header{
-    height: 40px;
-  }
 }
 
 .select2-container--default {
-  .base-select{
+  .base-select {
     border-radius: 8px !important;
     background: #F2F2F2;
     border-color: #F2F2F2;
     overflow: hidden;
   }
 
-  .select-header{
-    border-radius: 8px 0 0 8px !important;
-    border: none;
-    background: #F9F9F9;
+  .select-transparent {
+    border-radius: 8px;
+    border: 1px solid #DFDEE2;
+    background: #fff;
     overflow: hidden;
     position: relative;
+    height: 44px;
+  }
+
+  .select-unborder {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    background: #fff;
+    overflow: hidden;
+    position: relative;
+    height: 44px;
+
+
   }
 }
 
 .select2-container--default.select2-container--open {
-  .base-select,
-  .select-header{
+  .base-select{
     background: #fff;
     border-color: #3275EE;
   }
 }
+
 
 .select2-container--default .base-select {
   &.select--sm{
@@ -55,22 +64,29 @@
   }
 }
 
-.select2-container--default .select-header .select2-selection__rendered {
+.select2-container--default .select-transparent .select2-selection__rendered {
   height: 40px;
   line-height: 40px;
   padding-right: 24px;
-  background: #F9F9F9;
   font-size: 16px;
   padding-left: 16px;
 }
 
-.select2-container--default.select2-container--open .base-select .select2-selection__rendered,
-.select2-container--default.select2-container--open .select-header .select2-selection__rendered {
+.select2-container--default .select-unborder .select2-selection__rendered {
+  height: 40px;
+  line-height: 40px;
+  padding-right: 24px;
+  font-size: 16px;
+  padding-left: 16px;
+}
+
+.select2-container--default.select2-container--open .base-select .select2-selection__rendered{
   background: #fff;
 }
 
 .select2-container--default .base-select .select2-selection__arrow,
-.select2-container--default .select-header .select2-selection__arrow {
+.select2-container--default .select-unborder .select2-selection__arrow,
+.select2-container--default .select-transparent .select2-selection__arrow {
   width: 12px;
   height: 7px;
   top: 50%;
@@ -82,7 +98,7 @@
   background-image: url(../img/icons/icon-down.svg);
 }
 
-.select2-container--default .select-header .select2-selection__arrow{
+.select2-container--default .select-transparent .select2-selection__arrow{
   right: 10px;
 }
 
@@ -92,26 +108,41 @@
 }
 
 .select2-container--default .base-select .select2-selection__arrow b,
-.select2-container--default .select-header .select2-selection__arrow b {
+.select2-container--default .select-unborder .select2-selection__arrow b,
+.select2-container--default .select-transparent .select2-selection__arrow b {
   display: none;
 }
 
-.select2-container--default.select2-container--open .base-select .select2-selection__arrow,
-.select2-container--default.select2-container--open .select-header .select2-selection__arrow {
+.select2-container--default.select2-container--open .base-select .select2-selection__arrow{
   transform: rotateZ(180deg);
+}
+
+.select2-container--default.select2-container--open .select-transparent,
+.select2-container--default.select2-container--open .select-unborder{
+  border-top-color: #DFDEE2;
+  border-left-color: #DFDEE2;
+  border-right-color: #DFDEE2;
+  border-bottom-color: transparent;
+
+  .select2-selection__arrow {
+    transform: rotateZ(180deg);
+  }
 }
 
 .base-select-dropdown {
   margin-top: 8px;
   overflow: hidden;
 }
-.select-header-dropdown {
+.select-transparent-dropdown {
   min-width: 232px!important;
-  margin-top: 8px;
   overflow: hidden;
-  padding: 5px 0;
-  border: 1px solid #DFDEE2!important;
-  border-radius: 8px!important;
+  padding: 0;
+  border: 1px solid #DFDEE2;
+  border-top: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 .select2-container--open .base-select-dropdown.select2-dropdown--below {
@@ -125,7 +156,7 @@
 }
 
 .base-select-dropdown .select2-search--dropdown,
-.select-header-dropdown .select2-search--dropdown{
+.select-transparent-dropdown .select2-search--dropdown{
   display: none;
 }
 
@@ -136,13 +167,6 @@
 .base-select-dropdown .select2-results__option {
   padding: 12px 16px;
 }
-.select-header-dropdown .select2-results__option {
-  padding: 15px 16px;
-  font-size: 16px;
-  line-height: 16px;
-}
-
-
 
 .base-select-dropdown .select2-results__option--selected {
   background: #fff;
@@ -158,14 +182,31 @@
   }
 }
 
-.select2-container--default .select-header-dropdown .select2-results__option--highlighted.select2-results__option--selectable,
-.select2-container--default .select-header-dropdown .select2-results__option--selected {
-  background: #F9F9F9;
+.select-transparent-dropdown .select2-results__option {
+  padding: 8px 0px;
+  margin: 0 16px;
+  font-size: 16px;
+  line-height: 160%;
+  border-top: 1px solid #DFDEE2;
+
+}
+
+
+.select2-container--default .select-transparent-dropdown .select2-results__option--highlighted.select2-results__option--selectable,
+.select2-container--default .select-transparent-dropdown .select2-results__option--selected {
+  background: #fff;
   color: $blue;
 
   &:hover {
-    background: #F9F9F9;
+    background: #fff;
     color: $blue;
   }
+}
+
+
+.select2-container--default.select2-container--open .select-transparent .select2-selection__rendered {
+  background: #fff;
+  border-bottom-left-radius: 0!important;
+  border-bottom-right-radius: 0!important;
 }
 
