--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -115,12 +115,23 @@ label {
   margin-bottom: 12px;
 }
 
+.pt-12{
+  padding-top: 12px;
+}
+.pb-12{
+  padding-bottom: 12px;
+}
+
 .mb-32{
   margin-bottom: 32px;
 }
 
 .pb-32 {
   padding-bottom: 32px!important;
+}
+
+.pt-32 {
+  padding-top: 32px!important;
 }
 
 .border-bottom{
