--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,4 +36,11 @@
 @import "components/grid"; 
 @import "components/loader";
 @import "components/status";
-
+@import "components/capabilities";
+@import "components/statistic";
+@import "components/product-catalog";
+@import "components/about-project";
+@import "components/tariff";
+@import "components/marketing-banner";
+@import "components/advantages";
+@import "components/faq";
