--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,7 @@
 /*custom components*/
 @import "components/grid";
 @import "components/loader";
+@import "components/main-slider";
 @import "components/status";
 @import "components/capabilities";
 @import "components/statistic";
