--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,4 +67,5 @@
 
 @import "components/modals/modal-filter";
 @import "components/modals/header-menu";
+@import "components/modals/announcement-modal";
 
