добавить объявления, рассылки, прайс лист

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,6 +64,7 @@
 @import "components/catalog-link";
 @import "components/sort";
 @import "components/tabs";
+@import "components/dropzona";
 
 @import "components/modals/modal-filter";
 @import "components/modals/header-menu";
