--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -3,8 +3,8 @@
   height: 40px;
   background: #F2F2F2;
   border-radius: 8px;
-  font-size: 14px;
-  line-height: 185%;
+  font-size: 16px;
+  line-height: 160%;
   padding: 7px 16px;
   border: 2px solid #F2F2F2;
   color: rgba(0, 29, 58, 0.9);
@@ -54,6 +54,18 @@
   z-index: 2;
   color: #646464;
   font-size: 16px;
+  line-height: 160%;
+  transition: 0.15s ease-in-out;
+  margin-bottom: 24px;
+}
+
+.materil-group__sublabel {
+  position: absolute;
+  left: 16px;
+  top: 4px;
+  z-index: 2;
+  color: #646464;
+  font-size: 10px;
   line-height: 160%;
   transition: 0.15s ease-in-out;
   margin-bottom: 24px;
@@ -201,7 +213,7 @@ input[type="checkbox"]+span {
   display: inline-block;
   padding-left: 24px;
   color: $text_color;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 160%;
 }
 
