модалки 2-го ряда

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,7 +65,9 @@
 @import "components/sort";
 @import "components/tabs";
 @import "components/dropzona";
+@import "components/location-checkbox";
 
+@import "components/modals/base-mobal";
 @import "components/modals/modal-filter";
 @import "components/modals/header-menu";
 @import "components/modals/announcement-modal";
