--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,6 +64,8 @@
 @import "components/catalog-link";
 @import "components/sort";
 @import "components/tabs";
+@import "components/lk.scss";
+@import "components/personal-information";
 
 @import "components/modals/modal-filter";
 @import "components/modals/header-menu";
