basket + add-proposal-purchase

--- a/src/scss/base/_select.scss
+++ b/src/scss/base/_select.scss
@@ -155,8 +155,7 @@
   border: 1px solid #DFDEE2;
 }
 
-.base-select-dropdown .select2-search--dropdown,
-.select-transparent-dropdown .select2-search--dropdown{
+.select2-search--dropdown{
   display: none;
 }
 
