--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,6 +68,7 @@
 @import "components/personal-information";
 @import "components/dropzona";
 @import "components/location-checkbox";
+@import "components/basket-card";
 
 @import "components/modals/base-mobal";
 @import "components/modals/modal-filter";
