--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -206,7 +206,7 @@ input[type="checkbox"],
 input[type="radio"] {
   position: absolute;
   left: -999em;
-  display: none;
+  opacity: 0;
 }
 
 input[type="checkbox"]+span {
