--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,6 +68,11 @@
 @import "components/personal-information";
 @import "components/dropzona";
 @import "components/location-checkbox";
+@import "components/about-us";
+@import "components/services";
+@import "components/directory-pipe";
+@import "components/advertising";
+@import "components/banner-advertising";
 
 @import "components/modals/base-mobal";
 @import "components/modals/modal-filter";
