--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -326,6 +326,10 @@ input[type="radio"]:checked+label:before {
   }
 }
 
+.file-reader__label--inline {
+  display: inline-flex;
+}
+
 .file-reader__loader {
   display: none;
 }
