--- a/src/scss/components/_basket-card.scss
+++ b/src/scss/components/_basket-card.scss
@@ -1,15 +1,17 @@
 .basket-card{
   border: 1px solid #DFDEE2;
   border-radius: 8px;
+  background: #fff;
   overflow: hidden;
 }
 
 .basket-card__head,
 .basket-card__footer{
   background-color: #F2F2F2;
-  padding: 8px 10px;
+  padding: 8px 16px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .basket-card__footer{
@@ -32,4 +34,10 @@
   & + & {
     border-left: 1px solid #DFDEE2;
   }
+}
+
+.basket-card__delete {
+  width: 12px;
+  height: 12px;
+  margin-left: 5px;
 }
