--- a/src/scss/components/modals/_header-menu.scss
+++ b/src/scss/components/modals/_header-menu.scss
@@ -1,16 +1,49 @@
 .header-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
+  background: rgba(0,0,0,0.3);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.15s ease-in-out;
+  z-index: 20;
 }
 
-.header-menu__content{
+.header-menu__content {
   background-color: #fff;
   width: 280px;
   padding: 62px 24px 48px 24px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transform: translateX(101%);
+  transition: transform 0.2s ease-in-out;
+}
+
+.header-menu.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.header-menu__content.open {
+  transform: translateX(0);
+}
+
+.header-menu__close {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #F5F5F5;
+  position: absolute;
+  top: 24px;
+  right: 24px;
 }
 
 .header-menu__link{
@@ -24,65 +57,65 @@
 }
 
 
-.mfp-move-from-right {
+// .mfp-move-from-right {
 
-  .mfp-container{
-    padding-right: 0;
-    padding-left: 0;
-  }
+//   .mfp-container{
+//     padding-right: 0;
+//     padding-left: 0;
+//   }
 
-  .mfp-content{
-    height: 100%;
-  }
+//   .mfp-content{
+//     height: 100%;
+//   }
 
-  .mfp-close{
-    font-size: 0;
-    background-image: url(../img/icons/close.svg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    opacity: 1;
-    right: 24px;
-    top: 24px;
-    width: 32px;
-    height: 32px;
-    background-color: #f5f5f5;
-    border-radius: 50%;
-  }
+//   .mfp-close{
+//     font-size: 0;
+//     background-image: url(../img/icons/close.svg);
+//     background-repeat: no-repeat;
+//     background-position: center center;
+//     opacity: 1;
+//     right: 24px;
+//     top: 24px;
+//     width: 32px;
+//     height: 32px;
+//     background-color: #f5f5f5;
+//     border-radius: 50%;
+//   }
 
-  /* start state */
-  .mfp-with-anim {
-    opacity: 0.2;
-    transform: translateX(100%);
-    transition: all .5s;
-  }
+//   /* start state */
+//   .mfp-with-anim {
+//     opacity: 0.2;
+//     transform: translateX(100%);
+//     transition: all .5s;
+//   }
 
-  &.mfp-bg {
-    opacity: 0;
-    transition: all .5s;
-  }
+//   &.mfp-bg {
+//     opacity: 0;
+//     transition: all .5s;
+//   }
 
-  /* animate in */
-  &.mfp-ready {
-    .mfp-with-anim {
-      opacity: 1;
-      transform: translateX(0);
-    }
-    &.mfp-bg {
-      opacity: 0.3;
-    }
-  }
+//   /* animate in */
+//   &.mfp-ready {
+//     .mfp-with-anim {
+//       opacity: 1;
+//       transform: translateX(0);
+//     }
+//     &.mfp-bg {
+//       opacity: 0.3;
+//     }
+//   }
 
-  /* animate out */
-  &.mfp-removing {
+//   /* animate out */
+//   &.mfp-removing {
 
-    .mfp-with-anim {
-      transform: translateX(100%);
-      opacity: 0;
-    }
-    &.mfp-bg {
-      opacity: 0.2;
-    }
+//     .mfp-with-anim {
+//       transform: translateX(100%);
+//       opacity: 0;
+//     }
+//     &.mfp-bg {
+//       opacity: 0.2;
+//     }
 
-  }
+//   }
 
-}
+// }
