--- a/src/scss/base/_select.scss
+++ b/src/scss/base/_select.scss
@@ -190,7 +190,7 @@
 
 .select-transparent-dropdown .select2-results__option {
   padding: 8px 0px;
-  margin: 0 16px;
+  margin: 0;
   font-size: 16px;
   line-height: 160%;
   border-top: 1px solid #DFDEE2;
