--- a/src/scss/components/modals/_header-menu.scss
+++ b/src/scss/components/modals/_header-menu.scss
@@ -11,6 +11,7 @@
   pointer-events: none;
   transition: opacity 0.15s ease-in-out;
   z-index: 20;
+  visibility: hidden;
 }
 
 .header-menu__content {
@@ -25,6 +26,7 @@
 }
 
 .header-menu.open {
+  visibility: visible;
   opacity: 1;
   pointer-events: all;
 }
