--- a/src/scss/pages/_create-tender.scss
+++ b/src/scss/pages/_create-tender.scss
@@ -107,3 +107,15 @@
 .create-tender__footer {
 
 }
+
+.date-picker-wrapper {
+    z-index: 5;
+}
+
+.date-picker-wrapper .month-wrapper {
+    max-width: 230px;
+}
+
+.date-picker-wrapper .time2 {
+    float: left;
+}
